--- a/projet_app_web_commerce/WebContent/GestionProduit.xhtml
+++ b/projet_app_web_commerce/WebContent/GestionProduit.xhtml
@@ -71,7 +71,7 @@
 				<b:navLink value="#{connexionBean.user.userName}"></b:navLink>
 				<b:navLink value="#{connexionBean.user.roleName}"></b:navLink>
 				<h:form>
-				<b:commandButton style="text-align:center;" value="Déconnexion"
+				<b:commandButton style="text-align:center; border: none;" value="Déconnexion"
 					action="#{connexionBean.deconnexionAdmin()}"></b:commandButton>
 				</h:form>
 			</b:dropMenu>
@@ -174,7 +174,7 @@
 				<f:facet name="header">
 					<h:outputText value="Supprimer" />
 				</f:facet>
-				<p:commandButton action="supressionProduit"
+				<p:commandButton action="GestionProduit"
 					actionListener="#{produitBean.supprimerProduit}" id="iconOnly"
 					icon="pi pi-trash" title="Icon Only" />
 				<f:param id="deleteID" name="id" value="#{produit.idProduit}" />
