--- a/projet_app_web_commerce/WebContent/ValidationCommande.xhtml
+++ b/projet_app_web_commerce/WebContent/ValidationCommande.xhtml
@@ -16,7 +16,7 @@
 
 </h:head>
 
-<body>
+<h:body>
 
 	<b:navBar id="header" brand="Brand" brandHref="#" fluid="true">
 		<b:navbarLinks pull="left">
@@ -106,6 +106,7 @@
 			</div>
 
 			<div class="p-field p-col-12 p-md-2"></div>
+			<div class="p-field p-col-12 p-md-4"></div>
 
 		<div class="div-bouton-validation">
 
@@ -116,11 +117,11 @@
 				
 
 		</div>
-		<b:navLink style="color:#FFA07A;" value="Déjà Client ?" href="panier.xhtml"></b:navLink>
+		<b:navLink style="color:#FFA07A; margin-left:2rem;" value="Déjà Client ?" href="panier.xhtml"></b:navLink>
 		</div>
 
 	</h:form>
 
 	
-</body>
+</h:body>
 </html>
