--- a/projet_app_web_commerce/WebContent/gestionUser.xhtml
+++ b/projet_app_web_commerce/WebContent/gestionUser.xhtml
@@ -71,7 +71,7 @@
 				<b:navLink value="#{connexionBean.user.userName}"></b:navLink>
 				<b:navLink value="#{connexionBean.user.roleName}"></b:navLink>
 				<h:form>
-				<b:commandButton style="text-align:center;" value="Déconnexion"
+				<b:commandButton style="text-align:center; border: none;" value="Déconnexion"
 					action="#{connexionBean.deconnexionAdmin()}"></b:commandButton>
 				</h:form>
 			</b:dropMenu>
