--- a/projet_app_web_commerce/WebContent/accueilAdmin.xhtml
+++ b/projet_app_web_commerce/WebContent/accueilAdmin.xhtml
@@ -69,8 +69,9 @@
 			<b:dropMenu style="color:#FFA07A;" value="Profil">
 				<b:navLink value="#{connexionBean.user.userName}"></b:navLink>
 				<b:navLink value="#{connexionBean.user.roleName}"></b:navLink>
+				<hr/>
 				<h:form>
-				<b:commandButton style="text-align:center;" value="Déconnexion"
+				<b:commandButton style="text-align:center; border: none;" value="Déconnexion"
 					action="#{connexionBean.deconnexionAdmin()}"></b:commandButton>
 				</h:form>
 			</b:dropMenu>
