--- a/projet_app_web_commerce/WebContent/panier.xhtml
+++ b/projet_app_web_commerce/WebContent/panier.xhtml
@@ -76,9 +76,9 @@
 						</div>
 
 						<div class="p-field p-col-12 p-md-3 produit-ligne-commande">
-							<h:graphicImage class="p-md-3"
+							<h:graphicImage 
 								rendered="#{produit.idProduit == lc.produitId}"
-								library="images/" name="#{produitBean.produit.photo}"
+								library="images/" name="#{produit.photo}"
 								width="250" height="187.5" style="margin-top: 0.5rem;" />
 						</div>
 					</p:repeat>
@@ -115,10 +115,10 @@
 
 	<div class="grid-bouton-parent">
 		<div class="grid-bouton-enfant">
-			<p>Prix total : #{panierBean.sommePrix()}</p>
+			<p style="margin-top:1rem;">Prix total : #{panierBean.sommePrix()}€</p>
 
 <h:form>
-			<p:commandButton style="margin-right:20px;" value="Valider la commande"
+			<p:commandButton style="margin-right:20px; margin-bottom: 1rem;" value="Valider la commande"
 			action="#{panierBean.enregistrerPanier()}" >
 				<f:actionListener binding="#{clientBean.initialiserClient()}" />
 			</p:commandButton>
