--- a/projet_app_web_commerce/WebContent/gestionCategories.xhtml
+++ b/projet_app_web_commerce/WebContent/gestionCategories.xhtml
@@ -20,7 +20,8 @@
 </h:head>
 <h:body style="background-color: #FFF5EB">
 
-	<b:navBar id="header" brand="Brand" brandHref="Magasin.xhtml" fluid="true"
+	<b:navBar id="header" brand="Brand" brandHref="Magasin.xhtml"
+		fluid="true"
 		style="background-color: #DAF0FF; border-bottom: solid 3px black;">
 		<b:navbarLinks>
 			<b:navLink value="    " href="#"></b:navLink>
@@ -70,8 +71,8 @@
 				<b:navLink value="#{connexionBean.user.userName}"></b:navLink>
 				<b:navLink value="#{connexionBean.user.roleName}"></b:navLink>
 				<h:form>
-				<b:commandButton style="text-align:center; border: none;" value="Déconnexion"
-					action="#{connexionBean.deconnexionAdmin()}"></b:commandButton>
+					<b:commandButton style="text-align:center; border: none;"
+						value="Déconnexion" action="#{connexionBean.deconnexionAdmin()}"></b:commandButton>
 				</h:form>
 			</b:dropMenu>
 			<b:navLink style="color:#FFA07A;" value="Panier" href="panier.xhtml"></b:navLink>
@@ -84,6 +85,7 @@
 
 
 	<h:form>
+		<p:growl id="growl" severity="info,fatal" showDetail="true" life="3000" />
 		<p:dataTable class="dataTable-categorie" var="cat"
 			value="#{categorieBean.findAllCat()}" widgetVar="categorieTable"
 			emptyMessage="Aucun ne produit correspondant aux critères "
