--- a/projet_app_web_commerce/WebContent/ValidationCommande.xhtml
+++ b/projet_app_web_commerce/WebContent/ValidationCommande.xhtml
@@ -16,7 +16,7 @@
 
 </h:head>
 
-<h:body>
+<h:body style="background-color: #FFF5EB">
 
 	<b:navBar id="header" brand="Brand" brandHref="#" fluid="true">
 		<b:navbarLinks pull="left">
