--- a/projet_app_web_commerce/WebContent/MagasinFiltre.xhtml
+++ b/projet_app_web_commerce/WebContent/MagasinFiltre.xhtml
@@ -22,7 +22,9 @@
 <h:body style="background-color: #FFF5EB">
 
 
-	<b:navBar id="header" brand="Brand" brandHref="Magasin.xhtml" fluid="true"
+	<b:navBar id="header" brand="Sport Enterprise"
+		brand-style="color:#FFA07A; font-family: Gill Sans, sans-serif; font-size:22px;"
+		brandHref="Magasin.xhtml" fluid="true"
 		style="background-color: #DAF0FF; border-bottom: solid 3px black;">
 		<b:navbarLinks pull="left">
 			<b:navLink value="    " href="#"></b:navLink>
@@ -67,8 +69,8 @@
 			<f:param name="type" value="liste" />
 		</p:linkButton>
 	</div>
-	
-	<br/>
+
+	<br />
 	<br />
 
 	<div id="gridproduit" style="display: none">
