--- a/projet_app_web_commerce/WebContent/accueilAdmin.xhtml
+++ b/projet_app_web_commerce/WebContent/accueilAdmin.xhtml
@@ -20,7 +20,9 @@
 </h:head>
 <h:body style="background-color: #FFF5EB">
 
-	<b:navBar id="header" brand="Brand" brandHref="Magasin.xhtml" fluid="true"
+	<b:navBar id="header" brand="Sport Enterprise"
+		brand-style="color:#FFA07A; font-family: Gill Sans, sans-serif; font-size:22px;"
+		brandHref="Magasin.xhtml" fluid="true"
 		style="background-color: #DAF0FF; border-bottom: solid 3px black;">
 		<b:navbarLinks>
 			<b:navLink value="    " href="#"></b:navLink>
@@ -69,10 +71,10 @@
 			<b:dropMenu style="color:#FFA07A;" value="Profil">
 				<b:navLink value="#{connexionBean.user.userName}"></b:navLink>
 				<b:navLink value="#{connexionBean.user.roleName}"></b:navLink>
-				<hr/>
+				<hr />
 				<h:form>
-				<b:commandButton style="text-align:center; border: none;" value="Déconnexion"
-					action="#{connexionBean.deconnexionAdmin()}"></b:commandButton>
+					<b:commandButton style="text-align:center; border: none;"
+						value="Déconnexion" action="#{connexionBean.deconnexionAdmin()}"></b:commandButton>
 				</h:form>
 			</b:dropMenu>
 			<b:navLink style="color:#FFA07A;" value="Panier" href="panier.xhtml"></b:navLink>
