--- a/projet_app_web_commerce/WebContent/gestionCategories.xhtml
+++ b/projet_app_web_commerce/WebContent/gestionCategories.xhtml
@@ -20,8 +20,9 @@
 </h:head>
 <h:body style="background-color: #FFF5EB">
 
-	<b:navBar id="header" brand="Brand" brandHref="Magasin.xhtml"
-		fluid="true"
+	<b:navBar id="header" brand="Sport Enterprise"
+		brand-style="color:#FFA07A; font-family: Gill Sans, sans-serif; font-size:22px;"
+		brandHref="Magasin.xhtml" fluid="true"
 		style="background-color: #DAF0FF; border-bottom: solid 3px black;">
 		<b:navbarLinks>
 			<b:navLink value="    " href="#"></b:navLink>
@@ -85,7 +86,8 @@
 
 
 	<h:form>
-		<p:growl id="growl" severity="info,fatal" showDetail="true" life="3000" />
+		<p:growl id="growl" severity="info,fatal" showDetail="true"
+			life="3000" />
 		<p:dataTable class="dataTable-categorie" var="cat"
 			value="#{categorieBean.findAllCat()}" widgetVar="categorieTable"
 			emptyMessage="Aucun ne produit correspondant aux critères "
