--- a/projet_app_web_commerce/WebContent/ValidationCommande.xhtml
+++ b/projet_app_web_commerce/WebContent/ValidationCommande.xhtml
@@ -18,7 +18,9 @@
 
 <h:body style="background-color: #FFF5EB">
 
-	<b:navBar id="header" brand="Brand" brandHref="#" fluid="true">
+	<b:navBar id="header" brand="Sport Enterprise"
+		brand-style="color:#FFA07A; font-family: Gill Sans, sans-serif; font-size:22px;"
+		brandHref="#" fluid="true">
 		<b:navbarLinks pull="left">
 			<b:navLink value="    " href="#"></b:navLink>
 		</b:navbarLinks>
@@ -59,121 +61,122 @@
 	<br />
 	<br />
 	<br />
-	
+
 	<div id="form-new-client" style="display: block;">
-	
-	<h:form enctype="multipart/form-data">
 
-		<h1 class="titre">Inscription :</h1>
-		<div class="ui-fluid p-formgrid p-grid">
+		<h:form enctype="multipart/form-data">
 
-			<div class="p-field p-col-12 p-md-2"></div>
+			<h1 class="titre">Inscription :</h1>
+			<div class="ui-fluid p-formgrid p-grid">
 
-			<div class="p-field p-col-12 p-md-5">
-				<p:outputLabel for="nom" value="Nom" />
-				<p:inputText id="nom"
-					value="#{clientBean.client.nomClient}" required="true"
-					requiredMessage="Nom obligatoire" />
+				<div class="p-field p-col-12 p-md-2"></div>
+
+				<div class="p-field p-col-12 p-md-5">
+					<p:outputLabel for="nom" value="Nom" />
+					<p:inputText id="nom" value="#{clientBean.client.nomClient}"
+						required="true" requiredMessage="Nom obligatoire" />
+				</div>
+
+				<div class="p-field p-col-12 p-md-1"></div>
+
+				<div class="p-field p-col-12 p-md-2">
+					<p:outputLabel for="tel" value="Numéro de Téléphone" />
+					<p:inputText id="tel" value="#{clientBean.client.tel}"
+						required="true" requiredMessage="Téléphone obligatoire" />
+				</div>
+
+				<div class="p-field p-col-12 p-md-2"></div>
+
+				<div class="p-field p-col-12 p-md-2"></div>
+
+				<div class="p-field p-col-12 p-md-8">
+					<p:outputLabel for="adresse" value="Adresse" />
+					<p:inputText id="adresse" value="#{clientBean.client.adresse}"
+						required="true" requiredMessage="Adresse obligatoire" />
+				</div>
+
+				<div class="p-field p-col-12 p-md-2"></div>
+
+				<div class="p-field p-col-12 p-md-2"></div>
+
+				<div class="p-field p-col-12 p-md-8">
+					<p:outputLabel for="mail" value="Email" />
+					<p:inputText id="mail" value="#{clientBean.client.email}"
+						required="true" requiredMessage="Email obligatoire" />
+				</div>
+
+				<div class="p-field p-col-12 p-md-2"></div>
+				<div class="p-field p-col-12 p-md-4"></div>
+
+				<div class="div-bouton-validation">
+
+					<p:commandButton value="S'Inscrire et Valider la Commande"
+						action="#{commandeBean.editerFacture()}"
+						actionListener="#{clientBean.ajouterClientCommande()}">
+
+					</p:commandButton>
+
+
+				</div>
+				<div id="ancien-client">
+					<b:navLink style="color:#FFA07A; margin-left:2rem;"
+						value="Déjà Client ?"></b:navLink>
+				</div>
 			</div>
-			
-			<div class="p-field p-col-12 p-md-1"></div>
-			
-			<div class="p-field p-col-12 p-md-2">
-				<p:outputLabel for="tel" value="Numéro de Téléphone" />
-				<p:inputText id="tel"
-					value="#{clientBean.client.tel}" required="true"
-					requiredMessage="Téléphone obligatoire" />
-			</div>
 
-			<div class="p-field p-col-12 p-md-2"></div>
-			
-			<div class="p-field p-col-12 p-md-2"></div>
 
-			<div class="p-field p-col-12 p-md-8">
-				<p:outputLabel for="adresse" value="Adresse" />
-				<p:inputText id="adresse"
-					value="#{clientBean.client.adresse}" required="true"
-					requiredMessage="Adresse obligatoire" />
-			</div>
 
-			<div class="p-field p-col-12 p-md-2"></div>
-			
-			<div class="p-field p-col-12 p-md-2"></div>
 
-			<div class="p-field p-col-12 p-md-8">
-				<p:outputLabel for="mail" value="Email" />
-				<p:inputText id="mail"
-					value="#{clientBean.client.email}" required="true"
-					requiredMessage="Email obligatoire" />
-			</div>
-
-			<div class="p-field p-col-12 p-md-2"></div>
-			<div class="p-field p-col-12 p-md-4"></div>
-
-		<div class="div-bouton-validation">
-
-			<p:commandButton  value="S'Inscrire et Valider la Commande" action="#{commandeBean.editerFacture()}"
-			actionListener="#{clientBean.ajouterClientCommande()}" >
-			
-			</p:commandButton>
-				
-
-		</div>
-		<div id="ancien-client">
-		<b:navLink   style="color:#FFA07A; margin-left:2rem;" value="Déjà Client ?" ></b:navLink>
-		</div>
-		</div>
-		
-			
-		
-
-	</h:form>
+		</h:form>
 	</div>
-	
-	
+
+
 	<div id="form-ancien-client" style="display: none;">
-	
-	<h:form enctype="multipart/form-data">
 
-		<h1 class="titre">Se Connecter</h1>
-		<div class="ui-fluid p-formgrid p-grid">
+		<h:form enctype="multipart/form-data">
 
-			<div class="p-field p-col-12 p-md-2"></div>
+			<h1 class="titre">Se Connecter</h1>
+			<div class="ui-fluid p-formgrid p-grid">
 
-			<div class="p-field p-col-12 p-md-4">
-				<p:outputLabel for="id" value="Votre ID de Connexion" />
-				<p:inputNumber decimalPlaces="0" id="id"
-					value="#{clientBean.client.idClient}" required="true"
-					requiredMessage="ID obligatoire" />
+				<div class="p-field p-col-12 p-md-2"></div>
+
+				<div class="p-field p-col-12 p-md-4">
+					<p:outputLabel for="id" value="Votre ID de Connexion" />
+					<p:inputNumber decimalPlaces="0" id="id"
+						value="#{clientBean.client.idClient}" required="true"
+						requiredMessage="ID obligatoire" />
+				</div>
+
+				<div class="p-field p-col-12 p-md-1"></div>
+
+				<div class="div-bouton-validation" style="margin-top: 2.5rem">
+
+					<p:commandButton value="Se Connecter et Valider la Commande"
+						action="#{commandeBean.editerFacture()}"
+						actionListener="#{clientBean.ajouterClientCommande}">
+
+					</p:commandButton>
+
+
+				</div>
+
 			</div>
 
-			<div class="p-field p-col-12 p-md-1"></div>
 
-		<div class="div-bouton-validation" style="margin-top:2.5rem">
-
-			<p:commandButton  value="Se Connecter et Valider la Commande" action="#{commandeBean.editerFacture()}"
-			actionListener="#{clientBean.ajouterClientCommande}" >
-			
-			</p:commandButton>
-			
-			
-		</div>
-		
-		</div>
+			<div id="nouveau-client"
+				style="width: 15rem; margin: auto; margin-top: 2rem;">
+				<b:navLink style="color:#FFA07A; margin-left:2rem;"
+					value="En fait non !"></b:navLink>
+			</div>
 
 
-	<div id="nouveau-client" style="width: 15rem; margin: auto; margin-top : 2rem;">			
-	<b:navLink   style="color:#FFA07A; margin-left:2rem;" value="En fait non !" ></b:navLink>
-</div>
-
-
-	</h:form>
+		</h:form>
 	</div>
 
 	<h:outputScript library="scripts" name="scriptClient.js" />
-	
+
 	<h:outputScript library="primefaces" name="jquery/jquery.js"
 		target="head" />
-	
+
 </h:body>
 </html>
