--- a/projet_app_web_commerce/WebContent/panier.xhtml
+++ b/projet_app_web_commerce/WebContent/panier.xhtml
@@ -21,8 +21,9 @@
 </h:head>
 <h:body style="background-color: #FFF5EB">
 
-	<b:navBar id="header" brand="Brand" brandHref="Magasin.xhtml"
-		fluid="true"
+	<b:navBar id="header" brand="Sport Enterprise"
+		brand-style="color:#FFA07A; font-family: Gill Sans, sans-serif; font-size:22px;"
+		brandHref="Magasin.xhtml" fluid="true"
 		style="background-color: #DAF0FF; border-bottom: solid 3px black;">
 		<b:navbarLinks pull="left">
 			<b:navLink value="    " href="#"></b:navLink>
@@ -64,9 +65,7 @@
 
 			<div class="p-field p-col-12 p-md-12 produit-ligne-commande">
 
-				<p class="produit-id">
-					ID du produit :  #{lc.produitId}
-				</p>
+				<p class="produit-id">ID du produit : #{lc.produitId}</p>
 				<h:form>
 
 					<p:repeat var="produit" value="#{produitBean.findAllProduit()}">
@@ -75,10 +74,11 @@
 								value="#{produit.nomProduit}" />
 						</div>
 
-						<div class="p-field p-col-12 p-md-3 produit-image-conteneur-ligne-commande">
-							<h:graphicImage class="produit-image-ligne-commande" rendered="#{produit.idProduit == lc.produitId}"
-								library="images/" name="#{produit.photo}" 
-								  />
+						<div
+							class="p-field p-col-12 p-md-3 produit-image-conteneur-ligne-commande">
+							<h:graphicImage class="produit-image-ligne-commande"
+								rendered="#{produit.idProduit == lc.produitId}"
+								library="images/" name="#{produit.photo}" />
 						</div>
 					</p:repeat>
 				</h:form>
@@ -118,7 +118,7 @@
 
 
 			<h:form>
-			<p:growl id="growl" severity="warn" showDetail="true" life="3000" />
+				<p:growl id="growl" severity="warn" showDetail="true" life="3000" />
 				<p:commandButton style="margin-right:20px; margin-bottom: 1rem;"
 					value="Valider la commande"
 					action="#{panierBean.enregistrerPanier()}" update="@form">
@@ -128,7 +128,7 @@
 			</h:form>
 		</div>
 	</div>
-	
-	
+
+
 </h:body>
 </html>
