--- a/projet_app_web_commerce/WebContent/accueilAdmin.xhtml
+++ b/projet_app_web_commerce/WebContent/accueilAdmin.xhtml
@@ -44,6 +44,7 @@
 			<b:navLink rendered="#{connexionBean.user.roleName == 'AdminCat'}"
 				value="Gestion Produits" href="GestionProduit.xhtml"
 				style="color:#FFA07A;"></b:navLink>
+				<b:navLink style="color:#FFA07A;" href="ListeCommande.xhtml">Commande</b:navLink>
 		</b:navbarLinks>
 		<b:navbarLinks pull="left">
 			<b:navLink value="    " href="#"></b:navLink>
