--- a/projet_app_web_commerce/WebContent/ListeCommande.xhtml
+++ b/projet_app_web_commerce/WebContent/ListeCommande.xhtml
@@ -49,7 +49,7 @@
 			<b:navLink style="color:#FFA07A;" href="Magasin.xhtml">Magasin</b:navLink>
 			<b:navLink style="color:#FFA07A;" href="authentification.xhtml">S'identifier</b:navLink>
 			<b:navLink style="color:#FFA07A;" href="panier.xhtml">Panier</b:navLink>
-			<b:navLink style="color:#FFA07A;" href="Test.xhtml">Test</b:navLink>
+			<b:navLink style="color:#FFA07A;" href="ListeCommande.xhtml">Commande</b:navLink>
 		</b:navbarLinks>
 	</b:navBar>
 
